document charge routes
